--- a/assets/css/_keyframes.sass
+++ b/assets/css/_keyframes.sass
@@ -12,3 +12,10 @@
   100%
     transform: translateY(0)
     opacity: 1
+@keyframes showSelectList
+  0%
+    transform: translateY(-10px)
+    opacity: 0
+  100%
+    transform: translateY(0)
+    opacity: 1
